[INFER] Update possible types when generating IC for GETXPROP, bug 658240.