js/src/jit-test/tests/jaeger/bug658240.js
@@ -1,0 +1,11 @@
+function f() {
+    var x = 0;
+    for(var i=0; i<5; i++) {
+        (function() {
+          var q = parseFloat("2");
+          x += q;
+        })();
+    }
+    return x;
+}
+assertEq(f(), 10);
